<resources>
    <string name="app_name" translatable="false">Civitas</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must have at least 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Home Page</string>
    <string name="home_fragment_label">Your home</string>
    <string name="profile_fragment_label">Your profile</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome</string>
    <string name="work_in_progress">Work in progress...</string>
    <string name="view_profile">View profile</string>
    <string name="shared_preferences_name" translatable="false">pt.unl.fct.civitas.sharedPreferences</string>
    <string name="shared_preferences_token" translatable="false">pt.unl.fct.civitas.authToken</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_name">Name</string>
    <string name="action_register">Register</string>
    <string name="prompt_email" translatable="false">E-mail</string>
    <string name="profile_visibility_undefined" translatable="false">UNDEFINED</string>
    <string name="profile_visibility_public" translatable="false">PUBLIC</string>
    <string name="profile_visibility_private" translatable="false">PRIVATE</string>
    <string name="prompt_profile_visibility">Profile visibility</string>
    <string name="register_failed">Register failed</string>
    <string name="action_register_long">Don\'t have an account? Create one here</string>
    <string name="register_success">User successfully registered. Welcome to our community!</string>
    <string name="error_different_passwords">The passwords don\'t match</string>
    <string name="prompt_telephone">Home phone (optional)</string>
    <string name="prompt_mobilePhone">Mobile phone (optional)</string>
    <string name="prompt_nif">NIF</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_success">Successfully signed out</string>
    <string name="error_show_profile">Error retrieving profile data</string>
    <string name="prompt_telephone_short">Home phone</string>
    <string name="prompt_mobilePhone_short">Mobile phone</string>
    <string name="prompt_nif_short">NIF (can\'t be changed)</string>
    <string name="apply_changes">Apply changes</string>
    <string name="profile">Profile</string>
    <string name="terrains">Terrains</string>
    <string name="home">Home</string>
    <string name="terrain_fragment_label">Your terrains</string>
    <string name="error_show_terrains">Error retrieving terrain data</string>
    <string name="zero_terrains">No terrains found for this user</string>
    <string name="invalid_nif">Not a valid NIF</string>
    <string name="error_edit_profile">Error changing profile data</string>
    <string name="add_terrain">Add terrain</string>
    <string name="edit_terrain">Edit terrain</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="set_terrain_area">Set terrain area</string>
    <string name="parish_amendoa" translatable="false">Amêndoa</string>
    <string name="parish_cardigos" translatable="false">Cardigos</string>
    <string name="parish_carvoeiro" translatable="false">Carvoeiro</string>
    <string name="parish_envendos" translatable="false">Envendos</string>
    <string name="parish_ortiga" translatable="false">Ortiga</string>
    <string name="parish_macao_penhascoso_aboboreira" translatable="false">Mação, Penhasco e Aboboreira</string>
    <string name="terrain_data_insert_prompt">Please tell us about your terrain</string>
    <string name="terrain_name_prompt">Name of this terrain</string>
    <string name="parish">Parish</string>
    <string name="article">Article (mandatory)</string>
    <string name="description">Description</string>
    <string name="current_usage">Current usage</string>
    <string name="previous_usage">Previous usage</string>
    <string name="owners_long">Other owners (format: \"user1\" or \"user1,user2,user3\")</string>
    <string name="section">Section (mandatory)</string>
    <string name="terrain_coverage_type">Type of terrain coverage</string>
    <string name="terrain_documentation">Terrain documentation</string>
    <string name="upload_file">Upload file</string>
    <string name="changes_success">Changes successful</string>
    <string name="terrain_info_fragment_label">New terrain</string>
    <string name="invalid_article">Invalid article</string>
    <string name="invalid_section">Invalid section</string>
    <string name="help_add_terrain">Tap the map to create a point. Tap finish once you\'ve added all necessary points to form your terrain.</string>
    <string name="error_terrain_intersection">Conflict with already approved terrains detected.</string>
    <string name="prompt_name_terrain">Name (you can\'t have two terrains with the same name)</string>
    <string name="terrain_list">Terrains</string>
    <string name="article_uneditable">Article (cannot be changed)</string>
    <string name="section_uneditable">Section (cannot be changed)</string>
    <string name="terrain_id_uneditable">Terrain ID (cannot be changed)</string>
    <string name="terrain_area">Total area of this terrain</string>
    <string name="hectares" translatable="false">hectares</string>
    <string name="other_owners">Other owners</string>
    <string name="owners_add">Add other owners (ex. \"user2,user3\")</string>
    <string name="your_terrain">Your terrain</string>
    <string name="terrain_get_directions">Get directions</string>
    <string name="terrain_share_self">You can\'t share a terrain with yourself</string>
    <string name="error_terrain_update">Updating terrain info has failed...</string>
    <string name="error_terrain_share">Sharing of the terrain has failed... please re-check the additional owner field</string>
    <string name="owners">Owners</string>
    <string name="terrain_added">Terrain saved</string>
    <string name="success_terrain_share">Terrain sharing successful</string>
    <string name="terrain_add_owners">Add owners</string>
    <string name="error_add_terrain">Error adding terrain... the inserted data is likely the cause</string>
    <string name="success_add_terrain">Terrain registered successfully!</string>
    <string name="terrain_id">Terrain ID</string>
    <string name="shared_preferences_pfp" translatable="false">pt.unl.fct.civitas.profilePic</string>
    <string name="error_server_code">"Server error: code "</string>
    <string name="error_token_expired">Your session has expired. Please login again.</string>
</resources>